# travelpygame

./: .gitignore  README.md  pyproject.toml  requirements.txt
travelpygame/: __init__.py  best_pics.py  morphior_api.py  new_pic_eval.py  point_set.py  point_set_stats.py  random_points.py  reverse_geocode.py  scoring.py  simulation.py  stats.py  submission_comparison.py  submission_data.py  submissions.py  subs_per_player.py  tpg_api.py  tpg_data.py
travelpygame/point_set_stats/: __init__.py  misc.py  optimize_funcs.py  similarity.py  stats.py
travelpygame/reverse_geocode/: __init__.py  local.py  nominatim.py
travelpygame/tpg_data/: __init__.py  classes.py  combine.py  io.py  loader.py  main_tpg_import.py  per_user.py  save.py  tracker_import.py
travelpygame/util/: __init__.py  crs.py  distance.py  extreme_points.py  formatting.py  geo_utils.py  geom_utils.py  graph.py  io_utils.py  kml.py  other.py  pandas_utils.py  point_construction.py  text.py  web.py  world_geo.py
